# mpi-mutation-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  available_mutations.txt  commands.txt  corrbench_errors.md  corrbench_errors_merged.md  doxygen.cnf  evaluate_results.py  mutate_test_file.sh  wrapper.sh
build_modifications/Kripke/: CMakeLists.txt  compile_commands.json
build_modifications/amg/: Makefile.include  compile_commands.json
build_modifications/lulesh/: Makefile  compile_commands.json
patches/amg2013/: ArgErrorCommunicator1Mutation.1.patch  ArgErrorCommunicator1Mutation.10.patch  ArgErrorCommunicator1Mutation.2.patch  ArgErrorCommunicator1Mutation.3.patch  ArgErrorCommunicator1Mutation.4.patch  ArgErrorCommunicator1Mutation.5.patch  ArgErrorCommunicator1Mutation.6.patch  ArgErrorCommunicator1Mutation.7.patch  ArgErrorCommunicator1Mutation.8.patch  ArgErrorCommunicator1Mutation.9.patch  ArgErrorCommunicator2Mutation.1.patch  ArgErrorCommunicator2Mutation.10.patch  ArgErrorCommunicator2Mutation.2.patch  ArgErrorCommunicator2Mutation.3.patch  ArgErrorCommunicator2Mutation.4.patch  ArgErrorCommunicator2Mutation.5.patch  ArgErrorCommunicator2Mutation.6.patch  ArgErrorCommunicator2Mutation.7.patch  ArgErrorCommunicator2Mutation.8.patch  ArgErrorCommunicator2Mutation.9.patch  (+206 more)
src/: CMakeLists.txt  MPIMutationTool.cpp  Mutations.cpp  Mutations.h
test_files/: MPI_Allgather.c  MPI_Bcast.c  MPI_Gather.c  MPI_IRecv.c  MPI_Isend.c  MPI_Reduce.c  MPI_Scatter.c  MPI_Send_and_Recv.c  MPI_Send_and_Recv_without_compound_statement.c  MPI_Test.c  MPI_Wait.c
(+211 files in other folders)
